--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,21 @@ readme = "README.md"
 packages = [{include = "e_fish"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-pandas = "1.5"
+python = "^3.11"
 numba = "0.57"
 matplotlib = "3.7"
 tqdm = "^4.66.4"
 diskcache = "^5.6.3"
-scipy = "1.4.1"
+jupyter = "1.0.0"
+jupyter-core = "^5.7.2"
+nbformat = "^5.10.4"
+nbconvert = "^7.16.4"
+ipykernel = "^6.29.4"
+ipywidgets = "^8.1.3"
+jupyter-server = "^2.14.1"
+notebook = "6.4.13"
+pandas = "2.0.0"
+scipy = "1.13.0"
 
 
 [build-system]
