--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,22 +7,16 @@ readme = "README.md"
 packages = [{include = "e_fish"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-numba = "0.57"
-matplotlib = "3.7"
-tqdm = "^4.66.4"
+python = "^3.12"
+pandas = "^2.2.3"
+tqdm = "^4.66.5"
+jupyter = "^1.1.1"
+black = "^24.8.0"
+pyarrow = "^17.0.0"
 diskcache = "^5.6.3"
-jupyter = "1.0.0"
-jupyter-core = "^5.7.2"
-nbformat = "^5.10.4"
-nbconvert = "^7.16.4"
-ipykernel = "^6.29.4"
-ipywidgets = "^8.1.3"
-jupyter-server = "^2.14.1"
-notebook = "6.4.13"
-pandas = "2.0.0"
-scipy = "1.13.0"
-pyarrow = "^16.1.0"
+matplotlib = "^3.9.2"
+joblib = "^1.4.2"
+scikit-learn = "^1.5.2"
 
 
 [build-system]
